--- a/second_project/styles.css
+++ b/second_project/styles.css
@@ -1,33 +1,74 @@
+
+*{
+    margin: 0;
+    padding: 0;
+}
 .common-properties {
     height: 2471px;
     width: 1440px;
-    left: 65px;
+    left: 1640px;
     top: 0px;
     border-radius: 0px;
+
+    margin: 90px auto;
+    
     font-family: 'Times New Roman';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
     line-height: 29px;
 }
+div {
+    display: block
+
+}
 .some-background {
-    font-family:  Times New Roman;
+
     color: white;
     background-color: black;
     width: 1310px;
     height: 40px;
-    text-align: left;
-    border: 2px solid #5D6063;
-    border-radius: 5px;
-}
-.properties-text {
-    /* position: absolute; */
-    width: 1450px;
-    font-family: Times New Roman;
-    font-size: 25px;
     font-weight: 700;
     font-size: 40px;
     line-height: 46px;
     text-align: left;
-    
+    border: 2px solid #5D6063;
+    border-radius: 5px;
+
 }
+.properties-par {
+    width: 1303px;
+}
+.some-space {
+    margin-bottom: 53px;
+}
+
+ul, ol { 
+    list-style-position: inside;
+}
+
+a:link {
+    color: blue;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: purple;
+  }
+  
+  a:hover {
+    color: aqua;
+    text-decoration: none;
+
+  }
+  
+  a:active {
+    color: red;
+  }
+  a:visited:hover {
+    color: orange;
+    text-decoration: none;
+  }
+  a:visited:active {
+    color: red;
+  }
