--- a/Flexbox/styles.css
+++ b/Flexbox/styles.css
@@ -57,11 +57,24 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-
+  flex-direction: row;
+  align-items: center;
+}
+.first-item {
+  order: -1;
 }
 
+/* .last-item {
+  order: -1;
+} */
 .photo-grid-item {
   width: 300px;
   height: 300px;
   border: 1px solid #fff;
+}
+.social,
+.logo,
+.subscribe {
+  align-self: flex-end;
+  margin-bottom: 20px;
 }
