--- a/third_project/styles.css
+++ b/third_project/styles.css
@@ -7,18 +7,20 @@
     width: 1440px;
     height: 2427px;
     display: flex;
+    flex: wrap;
+    flex-direction: column;
 }
 .header-container{
     display: flex;
     justify-content: center;
     background-color: #E5E000;
     height: 200px;
+    width: 100%;
 
 }
 .header{
-    width: 1440px;
+    /* width: 1440px; */
     display: flex;
-    /* justify-content: flex-start; */
     padding: 80px;
 }
 .header-name{
@@ -29,6 +31,17 @@
     font-size: 50px;
     font-style: normal;
     align-items: center;
+    color: white;   
     
-    
+}
+.image-box {
+    display: flex;
+    justify-content: center;
+   
+    width: 100%;
+    height: 1080px;
+    background: url("images/img.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
