--- a/third_project/styles.css
+++ b/third_project/styles.css
@@ -50,14 +50,64 @@
     background-repeat: no-repeat;
 }
 .links-box{
+    display: flex;
     height: 100px;
     width: 100%;
     background-color: #E5E000;
     justify-content: flex-start;
+    align-items: center;
 }
 .link-text-box{
+    display: flex;
     width: 935px;
     height: 29px;
     padding-left: 80px;
+}
+.landing-box{
+    display: flex;
+    width: 100%;
+    height: 847px;
+    background-color: white;
+    margin-left: 80px;
+    margin-top: 110px;
+    flex-direction: column;
+}
+.landing-text-box{
+    width: 1280px;
+    height: 637px;
+    padding-left: 80px;
+    padding-top: 110px;
+    padding-bottom: 100px;
+    display: flex;
+}
+.about-yourself{
+    font-family: 'Helvetica';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 57px;
+    color: #000;
+    display: flex;
+    margin-bottom: 81px;
+}
+.landing-content{
+    width: 1280px;
+    height: 637px;
+    padding-left: 80px;
+    padding-top: 110px;
+    padding-bottom: 100px;
+    display: flex;
+    font-family: 'Helvetica';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 58px;
+    margin-bottom: 81px;
+
+}
+.footer-box{
+    width: 100%;
+    height: 200px;
+    background-color: #E5E000;
 
 }
