--- a/third_project/styles.css
+++ b/third_project/styles.css
@@ -35,7 +35,10 @@
     font-size: 50px;
     font-style: normal;
     align-items: center;
-    color: white;   
+    color: #FFF;
+    font-family: Helvetica;
+    font-weight: 700;
+    line-height: normal; 
     
 }
 .image-box {
@@ -56,58 +59,79 @@
     background-color: #E5E000;
     justify-content: flex-start;
     align-items: center;
+    padding-left: 80px;
+    padding-top: 36px;
+    padding-bottom: 35px;
+    padding-right: 425px;
 }
 .link-text-box{
     display: flex;
     width: 935px;
     height: 29px;
-    padding-left: 80px;
+    color: #FFF;
+    font-family: Helvetica;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase; 
+
 }
 .landing-box{
     display: flex;
     width: 100%;
     height: 847px;
     background-color: white;
-    margin-left: 80px;
-    margin-top: 110px;
-    flex-direction: column;
-}
-.landing-text-box{
-    width: 1280px;
-    height: 637px;
     padding-left: 80px;
     padding-top: 110px;
     padding-bottom: 100px;
-    display: flex;
+    padding-right: 80px;
+
 }
+.landing-text-box{
+    display: flex;
+    width: 1280px;
+    height: 637px;
+    flex-direction: column;
+}
+
 .about-yourself{
     font-family: 'Helvetica';
     font-style: normal;
     font-weight: 700;
     font-size: 50px;
-    line-height: 57px;
+    line-height: normal; 
     color: #000;
-    display: flex;
     margin-bottom: 81px;
 }
 .landing-content{
-    width: 1280px;
-    height: 637px;
-    padding-left: 80px;
-    padding-top: 110px;
-    padding-bottom: 100px;
-    display: flex;
     font-family: 'Helvetica';
     font-style: normal;
     font-weight: 300;
     font-size: 50px;
-    line-height: 58px;
     margin-bottom: 81px;
+    color: #000;
+    line-height: normal; 
 
 }
 .footer-box{
+    display: flex;
     width: 100%;
     height: 200px;
     background-color: #E5E000;
+    justify-content: flex-start;
+}
+.logo-box{
+    display: flex;
+    justify-content: center;
+    width: 135px;
+    height: 29px;
+    margin-left: 80px;
+    margin-top: 93px;
+    margin-bottom: 78px;
 
+    background: url("images/Frame\ 335.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
