--- a/third_project/styles.css
+++ b/third_project/styles.css
@@ -119,7 +119,7 @@
     width: 100%;
     height: 200px;
     background-color: #E5E000;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 .logo-box{
     display: flex;
@@ -134,4 +134,16 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+.footer-text{
+    color: #FFF;
+    text-align: right;
+    font-family: Helvetica;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-right: 80px;
+    margin-top: 74px;
+    margin-bottom: 69px;
 }
