--- a/fourth_project/styles.css
+++ b/fourth_project/styles.css
@@ -3,21 +3,62 @@
     width: 1440px;
     height: 1024px;
     flex-direction: column;
+    /* margin: auto; */
+    /* border: 1px solid blue; */
 }
 .header-box {
+    display: flex;
     width: 100%;
     height: 60px;
     background-color: #FE1A19;
+}
+.header-text-box{
+    display: flex;
+    width: 820px;
+    height: 20px;
+    margin: 20px;
+    flex-direction: column;
+    justify-content: center;
 
+    color: #FFF;
+    font-family: Helvetica;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 .middle-box {
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
     height: 904px;
+    box-sizing: border-box;
     background-color: white;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 70px;
+    padding-right: 70px;
+    /* margin-top: px; */
+    /* margin-bottom: 52px; */
+
+    /* padding-bottom: 52px; */
+/*     
+    margin-top: 52px;
+    margin-bottom: 52px; */
+
 }
+.main-box {
+    display: flex;
+    width: 400px;
+    height: 800px;
+    box-sizing: border-box;
+    border: 5px solid #E5E000;
+    border-radius: 30px;
+
+}
+
 .footer-box {
     width: 100%;
     height: 60px;
     background-color: #FE1A19;
-
 }
