--- a/fourth_project/styles.css
+++ b/fourth_project/styles.css
@@ -1,9 +1,15 @@
+*   {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .common-box {
     display: flex;
+    flex-wrap: wrap;
     width: 1440px;
     height: 1024px;
     flex-direction: column;
-    /* margin: auto; */
+    margin: auto;
     /* border: 1px solid blue; */
 }
 .header-box {
@@ -34,18 +40,10 @@
     height: 904px;
     box-sizing: border-box;
     background-color: white;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 70px;
-    padding-right: 70px;
-    /* margin-top: px; */
-    /* margin-bottom: 52px; */
-
-    /* padding-bottom: 52px; */
-/*     
-    margin-top: 52px;
-    margin-bottom: 52px; */
-
+    justify-content: center;
+    padding: 52px 0;
+    /* padding-left: 70px;
+    padding-right: 70px; */
 }
 .main-box {
     display: flex;
@@ -54,11 +52,55 @@
     box-sizing: border-box;
     border: 5px solid #E5E000;
     border-radius: 30px;
-
+    flex-direction: column;
+    margin: 0 25px;
+    padding: 33px;
+}
+.main-box-header{
+    color: #000;
+    font-family: Helvetica;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 33px;
+}
+.main-box-text{
+    display: flex;
+    width: 334px;
+    height: 670px;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    font-family: 'Times New Roman', Times, serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    color: black;
 }
 
 .footer-box {
+    display: flex;
     width: 100%;
     height: 60px;
     background-color: #FE1A19;
 }
+
+.footer-container-text {
+    display: flex;
+    width: 170px;
+    height: 20px;
+    margin: 20px;
+    
+}
+
+.footer-text {
+    font-family: 'Helvetica';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    display: flex;
+    color: #FFF;
+}
+
