--- a/fourth_project/styles.css
+++ b/fourth_project/styles.css
@@ -103,4 +103,15 @@
     display: flex;
     color: #FFF;
 }
+.img-box{
+    display: flex;
+    width: 135px;
+    height: 29px;
+    flex-shrink: 0;
+
+    background: url("images/image.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
