--- a/fourth_project/styles.css
+++ b/fourth_project/styles.css
@@ -81,6 +81,7 @@
     width: 100%;
     height: 60px;
     background-color: #FE1A19;
+    justify-content: space-between;
 }
 
 .footer-container-text {
@@ -104,8 +105,9 @@
     display: flex;
     width: 135px;
     height: 29px;
+    margin-right: 36px;
+    margin-top: 15px;
     flex-shrink: 0;
-
     background: url("images/image.svg");
     background-size: cover;
     background-position: center;
