--- a/fifth_project/evian.css
+++ b/fifth_project/evian.css
@@ -7,7 +7,7 @@
 .header {
     display: flex;
     position: fixed;
-    /* top: 0; */
+    top: 0;
     z-index: 3;
     width: 100%;
     height: 140px;
